# knurl

./: .aiignore  .gitignore  .knip.jsonc  .yarnrc.yml  AGENTS.md  CODE_OF_CONDUCT.md  INSTALL.md  README.md  RELEASE.md  SIGNING.md  TESTING.md  THIRD_PARTY_NOTICES.md  biome.jsonc  commitlint.config.cjs  deny.toml  index.html  lefthook.yml  package.json  third-party-rust-licenses.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.js  vitest.config.ts  wdio.conf.js  wdio.conf.ts
.cargo/: audit.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: release-windows-cross.yml  release.yml
.run/: Run App.run.xml  Run Knurl.run.xml  Run Node.run.xml
docs/: DEVELOPMENT.md
docs/plans/: 2025-10-05-icons-plan.md  2025-10-05-release-guidance-plan.md  2025-10-05-release-readiness-plan.md  2025-10-05-release-workflow-plan.md  2025-10-05-settings-tls-plan.md  2025-10-05-test-fixes-plan.md  2025-10-05-worktree-script-plan.md  2025-10-08-portal-postman-plan.md
scripts/: check-local.sh  codex.sh  generate-icons.mjs  generate-lucide-contact-sheet.mjs  git-worktree.sh  mcp-call.cjs  oauth-mock-server.mjs  portal-package.mjs  release-local.mjs  run-vitest-groups.mjs  shadcn.js  update-shadcn.sh  update-version.mjs  vite-console-forward-plugin.ts  vite-css-vars-export-plugin.ts
src/: App.css  App.test.tsx  App.tsx  env.d.ts  index.css  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_data/: crypto.rs  loader.rs  mod.rs
src-tauri/src/errors/: error.rs  mod.rs
src-tauri/src/http_client/: auth.rs  cookies.rs  engine.rs  hyper_engine.rs  manager.rs  mod.rs  request.rs  response.rs
src-tauri/src/http_client/hyper_engine/: connector.rs
src/bindings/: knurl.test.ts  knurl.ts
src/hooks/: use-debounced-callback.ts  use-event.ts  use-interval.ts  use-zod-form.ts
src/lib/: environments.test.ts  environments.ts  index.ts  prettier.ts  utils.test.ts  utils.ts
src/pages/: home.tsx  not-found.tsx
src/request/: pipeline.test.ts  pipeline.ts
src/state/: application.test.ts  application.ts  collections.test.ts  collections.ts  credentials.test.ts  credentials.ts  index.ts  request-tabs.test.ts  request-tabs.ts  settings.ts  sidebar.ts  utility-sheets.ts  utils.test.ts  utils.ts
src/test/: setup.ts  test-store.ts  testing-lib.ts  zustand.ts
src/types/: application.ts  collections.test.ts  collections.ts  common.ts  credentials.ts  environments.ts  index.ts  request-tabs.ts  request.test.ts  request.ts  settings.ts  sidebar.ts  (+1 more)
test/: migration-parse.test.js  tsconfig.json
(+145 files in other folders)
